--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 numpy==1.23.1
-pandas
 pymongo
 transformers
 matplotlib
-tensorflow
+tensorflow==2.11.0
+tensorrt==8.4.1.5
+torch==1.12.1
+transformers==4.21.1
+pandas==1.4.3
+scipy==1.8.1
