--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,8 @@ numpy==1.23.1
 pymongo
 transformers
 matplotlib
-tensorflow==2.11.0
-tensorrt==8.4.1.5
-torch==1.12.1
-transformers==4.21.1
-pandas==1.4.3
-scipy==1.8.1
+tensorflow
+tensorrt
+torch
+pandas
+scipy
