--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-# numpy==1.23.1
-# pandas
-# pymongo
-# transformers
+numpy==1.23.1
+pandas
+pymongo
+transformers
 # matplotlib
-# tensorflow
+tensorflow
 # tensorrt
 # torch
 # scipy
