--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 transformers
-torch  # Use this for PyTorch
-# tensorflow  # Use this for TensorFlow if not using PyTorch
+# torch  # Use this for PyTorch
+tensorflow  # Use this for TensorFlow if not using PyTorch
 numpy
 pandas
 pymongo
