--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 transformers
-torch  # Use this for PyTorch
+# torch  # Use this for PyTorch
 tensorflow  # Use this for TensorFlow if not using PyTorch
 numpy
 pandas
