--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.19.2",
     "chalk": "^2.4.1",
     "convert-json-schema-to-mongoose": "^0.3.2",
